<resources>
    <string name="app_name">パーツを集めたサンプルアプリ</string>
    <!-- ボタンのラベル(汎用) -->
    <string name="bt_text_bt1">ボタン１</string>
    <string name="bt_text_bt2">ボタン２</string>
    <string name="bt_text_bt3">ボタン３</string>
    <string name="bt_text_bt4">ボタン４</string>
    <string name="bt_text_bt5">ボタン５</string>
    <string name="bt_text_bt6">ボタン６</string>

    <string name="bt_start">スタート</string>
    <string name="bt_stop">ストップ</string>
    <string name="tv_play">再生中</string>
    <string name="tv_stop">停止中</string>

    <string name="tv_default">テキストビューのデフォルト値</string>

    <string name="rb_yes">Yes</string>
    <string name="rb_maybe">Maybe</string>
    <string name="rb_no">No</string>
    <string name="bt_home">ホームへ</string>

    <!-- Text1の３章の部品化と完成アプリ -->
    <string name="tv_chap3">３章の部品化と完成アプリ</string>
    <string name="bt_button">Button</string>
    <string name="tv_hi">Hi, Android !!</string>
    <string name="tv_morning">Good Morning, Kotlin !!</string>
    <string name="tv_afternoon">Good Afternoon, Kotlin !!</string>
    <string name="bt_imageView">ImageView</string>
    <string name="bt_bt1">ボタン１</string>
    <string name="bt_bt2">ボタン２</string>
    <string name="bt_helloAndroid">Hello Android App</string>
    <string name="tv_hello">Hello Android Studio !!</string>
    <string name="bt_tapHere">ここをタップ！</string>
    <string name="im_text_sample">サンプル画像</string>

    <!-- Text1の５章の部品化と完成アプリ -->
    <string name="tv_chap5">５章の部品化と完成アプリ</string>

    <string name="bt_intent">Intent</string>
    <string name="bt_sharedPreferences">SharedPreferences</string>
    <string name="bt_janken">じゃんけんアプリ</string>
    <string name="bt_janken2">じゃんけん２アプリ</string>
    <string name="janken_text">じゃん・けん・・・</string>
    <string name="back_text">戻る</string>
    <string name="result_win">あなたの勝ちです</string>
    <string name="result_lose">コンピュータの勝ちです</string>
    <string name="result_draw">あいこです</string>

    <!-- Text1の６章の部品化と完成アプリ -->
    <string name="tv_chap6">６章の部品化と完成アプリ</string>
    <string name="bt_spinner">Spinner</string>
    <string name="bt_seekbar">SeekBar</string>
    <string name="bt_radioGroup">RadioButton</string>
    <string name="bt_mysizeApp">体型記録アプリ</string>
    <string name="bt_save">保存</string>
    <string name="hegiht">身長</string>

    <!-- Text1の７章の部品化と完成アプリ -->
    <string name="tv_chap7">７章の部品化と完成アプリ</string>
    <string name="bt_sensor1">Sensor</string>
    <string name="bt_sensor2">玉転がしアプリ</string>

    <!-- Text1の８章の部品化と完成アプリ -->
    <string name="tv_chap8">８章の部品化と完成アプリ</string>
    <string name="bt_ViewPropertyActivity">ViewPropertyAnimator</string>
    <string name="bt_ImageSwitcherActivity">ImageSwitcher</string>
    <string name="tv_TimerActivity">タイマー処理</string>
    <string name="bt_TimerActivity">Timer</string>
    <string name="tv_MediaPlayer">音楽の再生</string>
    <string name="bt_MediaPlayerActivity">MediaPlayer</string>
    <string name="bt_SlideShowApp">SlideShow App</string>

    <!-- Text1の９章の部品化と完成アプリ -->
    <string name="tv_chap9">９章の部品化と完成アプリ</string>
    <string name="bt_floatingActionButtonActivity">FloatingActionButton</string>
    <string name="bt_countDownActivity">CountDown</string>
    <string name="tv_SoundPool">音楽の再生</string>
    <string name="bt_SoundPoolActivity">SoundPool</string>

    <string name="bt_sound1">サウンド１</string>
    <string name="tv_sound1">サウンド１</string>
    <string name="bt_sound2">サウンド２</string>
    <string name="tv_sound2">サウンド２</string>
    <string name="bt_pause">一時停止</string>
    <string name="tv_pause">一時停止中</string>
    <string name="bt_countDownApp">CountDownTimer App</string>


    <!-- Text1の１０章の部品化と完成アプリ -->
    <string name="tv_chap10">１０章の部品化と完成アプリ</string>
    <string name="bt_scrollView">ScrollView</string>
    <string name="bt_scrollView2">ScrollView2</string>
    <string name="bt_linearLayout">LinearLayout</string>
    <string name="bt_optionMenu">OptionsMenu</string>
    <string name="bt_contextMenu">ContextMenu</string>
    <string name="bt_intent2">Intent2</string>

    <string name="bt_menuApp">洋食屋のメニューアプリ</string>
    <string name="tpo_page">TOP PAGE</string>
    <string name="lunch_text">ランチ</string>
    <string name="dinner_text">ディナー</string>
    <string name="lunch01_text">エビフライと牛ロースステーキ</string>
    <string name="lunch02_text">鶏の赤ワイン煮</string>
    <string name="dinner01_text">海の幸コース</string>
    <string name="dinner02_text">牛フィレ肉のセット</string>
    <string name="sms_text">SMSで予約</string>
    <string name="mail_text">メールで予約</string>
    <string name="share_text">共有する</string>
    <string name="browse_text">ウェブサイトを開く</string>

    <!-- Text1の１１章の部品化と完成アプリ -->
    <string name="tv_chap11">１１章の部品化と完成アプリ</string>

    <string name="bt_alarmManagerActivity">AlarmManager</string>
    <string name="bt_alarm">５秒後にアラームをセット</string>
    <string name="bt_cancel">アラームをキャンセル</string>
    <string name="alarm_set">アラームをセットしました。</string>
    <string name="alarm_receive">アラームを受信しました。</string>
    <string name="alarm_cancel">アラームをキャンセルしました。</string>

    <string name="bt_dialogActivity">Dialog</string>
    <string name="bt_alertDialog">アラートダイアログ</string>
    <string name="tv_negative">Negative</string>
    <string name="tv_positive">Positive</string>
    <string name="tv_date">日付のダイアログを表示</string>
    <string name="tv_time">時刻のダイアログを表示</string>

    <string name="bt_sleepOff">SleepOff</string>
    <string name="bt_wakeup">１０秒後に画面をONにする</string>

    <string name="bt_alarmClockApp">AlarmClockApp</string>

    <!-- Text1の１２章の部品化と完成アプリ -->
    <string name="tv_chap12">１２章の部品化と完成アプリ</string>

    <string name="bt_realm">Realm</string>
    <string name="bt_listView">ListView</string>


    <string name="bt_scheduleApp">ScheduleApp</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="action_settings">Settings</string>
    <string name="date_text">日付：</string>
    <string name="title_text">タイトル：</string>
    <string name="detail_text">詳細：</string>
    <string name="save_text">保存</string>
    <string name="delete_text">削除</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>